added client side entity renderer